--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -19,6 +19,9 @@
   width: 5rem !important;
   border-radius: 14% !important;
   background: lightcyan;
+  border: 2px solid darkcyan;
+  box-shadow: rgb(0 0 0 / 70%) 0rem 0.25rem 0.375rem -0.0625rem,
+    rgb(0 0 0 / 80%) 0rem 0.125rem 0.25rem -0.0625rem;
 }
 
 .profile-main-div {
@@ -86,6 +89,7 @@
 
 .profile-info-section-text {
   font-size: 14px;
+  line-height: 2rem;
 }
 
 .profile-info-section-text > .profile-info-heading {
@@ -151,6 +155,9 @@
   margin: 0.5rem 0rem;
   font-size: 25px;
   font-weight: 400;
+  font-size: 40px;
+  color: darkolivegreen;
+  font-family: fantasy;
 }
 
 .profile-section-heading {
@@ -193,4 +200,14 @@
 .profile-info-icon-btn {
   border: none;
   background: transparent;
+}
+
+.profile-section2-row {
+  margin: 1.5rem 0rem !important;
+}
+
+.profile-section2-row > .column-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
