--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -4,6 +4,7 @@
   /* height: 600px; */
   border-radius: 1rem !important;
   background: transparent !important;
+  margin: 0 2rem 0px 0px;
 }
 
 .profile-card-1 {
@@ -121,16 +122,17 @@
 .profile-card > .card > img {
   width: 270px;
   border-radius: 1rem;
+  height: 200px;
 }
 
 .profile-recipe-title {
   font-size: 20px !important;
   font-weight: 500 !important;
+  height: 3rem;
 }
 
 .profile-recipe-time {
-  font-size: 15px;
-  font-weight: 300;
+  font-size: 15px !important;
 }
 
 .profile-racipe-rating {
@@ -210,4 +212,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.profile-recipe-dec {
+  height: 14.5rem;
 }
