--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -115,8 +115,8 @@
 
 .profile-recipe-card {
   display: flex;
-  justify-content: baseline;
-  width: 85%;
+  justify-content: baseline !important;
+  width: 95%;
 }
 
 .profile-card > .card > img {
@@ -133,6 +133,8 @@
 
 .profile-recipe-time {
   font-size: 15px !important;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .profile-racipe-rating {
@@ -216,4 +218,16 @@
 
 .profile-recipe-dec {
   height: 14.5rem;
+}
+
+.profile-recipe-card-section {
+  width: 90%;
+}
+
+.profile-recipe-card-heading {
+  margin: 0.5rem 0rem;
+  font-weight: 400;
+  font-size: 40px;
+  color: darkolivegreen;
+  font-family: fantasy;
 }
